--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,7 +20,7 @@ jobs:
           python-version: '3.11.2'
 
       - name: Install Requirements
-        run:  pip install flask
+        run:  pip install flask flask-wtf
               
       - name: Unit Test
         run: python -m unittest -v test
